# csvql

./: .env  .gitignore  Cargo.toml  LICENSE.txt  README.md  todo.md
docs/: commands.md  imports.md
examples/: a.sql  b.sql  c.sql
sql/: info.sql
src/: file.rs  main.rs  query.rs  repl.rs  resolve.rs  table.rs  util.rs
src/query/: postgres.rs  querier.rs
src/types/: postgres.rs
src/util/: evict.rs  format.rs  less.rs  validate.rs
tst/: test.sql  third.csv
tst/data/: out_12.csv  output.csv  output3.csv  output_10.csv  output_9.csv  relpathtest.csv  second.csv  test.csv  test_type_annotations.csv  third.csv
