[package]
name = "csvql"
version = "0.1.0"
authors = ["Akhil Bhandaru <bhandaru.akhil@gmail.com>"]
edition = "2018"
description = "CSV query language + command line tool + repl"
keywords = ["csv", "sql", "query language"]
repository = "https://github.com/avbhandaru/csvql"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
