[package]
name = "csvql"
version = "0.1.0"
authors = ["Akhil Bhandaru <bhandaru.akhil@gmail.com>"]
edition = "2018"
description = "CSV query language + command line tool + repl"
keywords = ["csv", "sql", "query language"]
repository = "https://github.com/avbhandaru/csvql"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# structopt = { version = "0.3", features = [ "paw" ] }
# paw = "1.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
clap = "2.33"
regex = "1"
