[package]
name = "csvql"
version = "0.1.0"
authors = ["Akhil Bhandaru <bhandaru.akhil@gmail.com>"]
edition = "2018"
description = "CSV query language + command line tool + repl"
keywords = ["csv", "sql", "query language"]
repository = "https://github.com/avbhandaru/csvql"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
clap = "2.33"
regex = "1"
tokio-postgres = "0.6.0"
tokio = { version = "0.3", features = ["full"] }
async-trait = "0.1.42"
serde = { version = "1.0.118", features = ["derive"] }
ansi_term = "0.12.1"
rustyline = "7.1.0"
rustyline-derive = "0.4.0"
lazy_static = "1.4.0"
